<resources>
    <string name="app_name">Synevent</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name"> Name </string>
    <string name="enter">Sign In!</string>
    <string name="register"> Don\'t have an account? Do it now! </string>
    <string name="registerbutton"> Register!</string>
    <string name="already"> Already Registered? Login Now!</string>
    <string name="logout"> Logout </string>
    <string name="create">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_event">Enter title</string>
    <string name="author">Author</string>
    <string name="timer">Timer</string>
    <string name="finished_by">Finished by:</string>
    <string name="all_dayevent">All-day</string>
    <string name="startevent">Start</string>
    <string name="endevent">End</string>
    <string name="groups">Groups</string>
    <string name="schedule">Schedule</string>
    <string name="events">Events</string>
    <string name="navigation_drawer_open">Open </string>
    <string name="navigation_drawer_close">Close </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="refresh">Refresh</string>
    <string name="new_invitation">New Invitation</string>
    <string name="save">Save</string>
    <string name="new_event">New Event</string>
    <string name="new_activity">New Activity</string>

</resources>
