<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_calendar"
            android:icon="@drawable/calendar_clock"
            android:title="My calendar"/>

        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_event"
            android:title="@string/events" />

        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/group"
            android:icon="@drawable/ic_group"
            android:title="@string/groups"
            />


    </group>

</menu>