<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_invitation_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="40sp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:onClick="cancelEvent"
                android:background="@android:color/transparent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_invitation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:text="@string/save"
                android:onClick="saveEvent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="15sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_invitation"
            android:textSize="23sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="9"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@drawable/text_input"
                android:backgroundTint="@color/colorPrimaryDark" />
            <EditText
                android:id="@+id/et_name_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:shadowColor="@color/colorPrimary"
                android:hint="@string/title_event"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="6"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/clock"
                android:backgroundTint="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginLeft="10dp"
                        android:text="@string/startevent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="15dp"
                        android:text="Vie., 18 oct. 08:00"
                        android:textSize="20dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginStart="10dp"
                        android:text="@string/endevent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                    <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAlignment="textEnd"
                        android:text="Vie., 18 oct. 09:00"
                        android:textSize="20dp"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/checkmark"
                android:backgroundTint="@color/colorPrimaryDark" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:text="@string/finished_by"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_by_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"/>
                <CheckBox
                    android:id="@+id/cb_by_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

</ScrollView>