<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="50dp"
            android:id="@+id/image_event"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/volcano"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btn_cancel_agenda_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="40sp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:onClick="cancelAgenda"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_create_agenda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:text="@string/save"
                android:onClick="saveAgenda"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="15sp"/>

        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Agenda"
        android:textSize="23dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="9"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/text_input"
            android:backgroundTint="@color/colorPrimaryDark" />
        <EditText
            android:id="@+id/et_title_new_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:shadowColor="@color/colorPrimary"
            android:hint="@string/title_event"/>
    </LinearLayout>

</LinearLayout>