<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btn_cancel_event_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:onClick="cancelEvent"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/btn_create_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/create"
            android:onClick="saveEvent"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Schedule"
        android:textSize="23dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="9"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/text_input"
            android:backgroundTint="@android:color/black" />
        <EditText
            android:id="@+id/et_name_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:shadowColor="@color/colorPrimary"
            android:hint="@string/title_event"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="6"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/clock"
            android:backgroundTint="@android:color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:text="Day"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"/>
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="10dp"
                    android:text="Time"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:textColor="@android:color/black"
                    android:textAlignment="textEnd"
                    android:text="Vie., 18 oct. 09:00"
                    android:textSize="20dp"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="6"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/location"
            android:backgroundTint="@android:color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:hint="Enter Location [Not required]"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="6"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit"
                android:backgroundTint="@android:color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="Notes"
                android:textColor="@android:color/black"
                android:textSize="20dp"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="Add notes to your event"
            android:gravity="top"/>
    </LinearLayout>
</LinearLayout>
